Revert committed some changes because they distroyed some tests